k8s/lan-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lan-frontend
  namespace: lan-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lan-frontend
  template:
    metadata:
      labels:
        app: lan-frontend
    spec:
      containers:
        - name: lan-frontend
          image: ghcr.io/kirixi/lanfrontend-stable:947e3a3
      imagePullSecrets:
        - name: ghcr-token
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lan-api
  namespace: lan-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lan-api
  template:
    metadata:
      labels:
        app: lan-api
    spec:
      containers:
        - name: lan-api
          image: ghcr.io/kirixi/lanserver-stable:947e3a3
      imagePullSecrets:
        - name: ghcr-token
