k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lan-ingress
  namespace: lan-test
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - "lan.tjonathan.com"
      - "api.tjonathan.com"
      secretName: test-secret
  ingressClassName: nginx
  rules:
    - host: lan.tjonathan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lan-frontend-service
                port:
                  number: 80
    - host: api.tjonathan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lan-api-service
                port:
                  number: 8080
